--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     12/2023
                 </div>
                 <div class="web">
-                    <a href="#" target="_blank">Your CV Website</a>
+                    <a href="https://quangloi1108.github.io/CV/" target="_blank">https://quangloi1108.github.io/CV/</a>
                 </div>
                 <div class="location">
                     Mô Tả:
