--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nguyen Quang Loi's Portfolio</title>
+    <title>Nguyen Quang Loi CV</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="avatar">
-            <img src="https://i.pinimg.com/564x/eb/57/6f/eb576ff023487bcb1fa3ad61ee7b23ee.jpg" alt="Nguyen Quang Loi's Avatar">
+            <img src="1089.jpg" alt="Nguyen Quang Loi's Avatar">
         </div>
         <div class="name">
             <h1>NGUYEN QUANG LOI</h1>
